// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component password snapshot test 1`] = `
<div>
  <div
    class="form-input icon"
  >
    <i
      class="icon-lock"
    />
    <input
      autocomplete="off"
      id="password"
      name="password"
      type="password"
      value="pwd"
    />
  </div>
</div>
`;

exports[`Input component snapshot test 1`] = `
<div>
  <div
    class="form-input icon"
  >
    <i
      class="icon-user"
    />
    <input
      autocomplete="off"
      id="username"
      name="username"
      type="text"
      value="test"
    />
  </div>
</div>
`;
